force-app/main/default/objects/SVMXC__Product_Stock__c/SVMXC__Product_Stock__c.object-meta.xml
<CustomObject>
    <customHelpPage>SVMXC__SVMX_LaunchHelp</customHelpPage>
    <description>Product stock is used to store inventory information for a product in a given location and status along with reorder information.</description>
    <label>Product Stock</label>
    <nameField>
        <displayFormat>STK-{00000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Stock</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>