force-app/main/default/objects/SVMXC__Product_Stock__c/fields/Batch_Management__c.field-meta.xml
<CustomField>
    <fullName>Batch_Management__c</fullName>
    <description>Field to map value of Product's Batch Management value coming from SAP</description>
    <formula>SVMXC__Product__r.Batch_Management__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Batch Management</label>
    <type>Checkbox</type>
</CustomField>