force-app/main/default/objects/SVMXC__Product_Stock__c/fields/Decontamination_Required__c.field-meta.xml
<CustomField>
    <fullName>Decontamination_Required__c</fullName>
    <description>DCP-25241 To Show Decontamination Required on Product Stock Related List View Columns</description>
    <formula>SVMXC__Product__r.Decontamination_Required__c</formula>
    <label>Decontamination Required</label>
    <type>Checkbox</type>
</CustomField>