force-app/main/default/objects/SVMXC__Product_Stock__c/fields/Product_Code__c.field-meta.xml
<CustomField>
    <fullName>Product_Code__c</fullName>
    <description>To get the product code on product stock.</description>
    <formula>SVMXC__Product__r.ProductCode</formula>
    <label>Product Code</label>
    <type>Text</type>
</CustomField>