force-app/main/default/objects/SVMXC__Product_Stock__c/fields/Product_Name__c.field-meta.xml
<CustomField>
    <fullName>Product_Name__c</fullName>
    <description>To populate the product Name from associated product
Source: Product</description>
    <formula>SVMXC__Product__r.Name</formula>
    <label>Product Name</label>
    <type>Text</type>
</CustomField>