force-app/main/default/objects/SVMXC__Product_Stock__c/fields/Replenishment_Eligible__c.field-meta.xml
<CustomField>
    <fullName>Replenishment_Eligible__c</fullName>
    <description>Field to map value of Product's Replenishment Eligible field</description>
    <formula>SVMXC__Product__r.Replenishment_Eligible__c</formula>
    <label>Replenishment Eligible</label>
    <type>Text</type>
</CustomField>