force-app/main/default/objects/SVMXC__Product_Stock__c/fields/RMA_Required__c.field-meta.xml
<CustomField>
    <fullName>RMA_Required__c</fullName>
    <description>DCP-25241 - Updates to Product Stock List View to show RMA Checkbox</description>
    <formula>SVMXC__Product__r.RMA_Required__c</formula>
    <label>RMA Required</label>
    <type>Checkbox</type>
</CustomField>