force-app/main/default/objects/SVMXC__Product_Stock__c/fields/Service_Blocked__c.field-meta.xml
<CustomField>
    <fullName>Service_Blocked__c</fullName>
    <description>To block the Product Stock if the Product&apos;s Cross Plant Material Status value contains Y6, Y7, Y8, Z0, Z1, Z2</description>
    <formula>SVMXC__Product__r.Is_Product_Blocked__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Service Blocked</label>
    <type>Checkbox</type>
</CustomField>