force-app/main/default/objects/SVMXC__Product_Stock__c/fields/SVMX_PS_External_ID__c.field-meta.xml
<CustomField>
    <fullName>SVMX_PS_External_ID__c</fullName>
    <description>Product Stock External ID</description>
    <externalId>true</externalId>
    <label>External ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>