force-app/main/default/objects/SVMXC__Product_Stock__c/fields/SVMX_PS_VS_Product_Tracking__c.field-meta.xml
<CustomField>
    <fullName>SVMX_PS_VS_Product_Tracking__c</fullName>
    <description>This field helps to determine the Product Tracking (If Serialized/Non-Serialized)</description>
    <formula>TEXT(SVMXC__Product__r.SVMXC__Tracking__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This field helps to determine the Product Tracking (If Serialized/Non-Serialized)</inlineHelpText>
    <label>Product Tracking</label>
    <type>Text</type>
</CustomField>