force-app/main/default/objects/SVMXC__Product_Stock__c/fields/SVMXC__Allocated_Qty__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Allocated_Qty__c</fullName>
    <label>Allocated Qty</label>
    <summarizedField>SVMXC__Allocated_Stock__c.SVMXC__Pending_Qty__c</summarizedField>
    <summaryForeignKey>SVMXC__Allocated_Stock__c.SVMXC__Product_Stock__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>