force-app/main/default/objects/SVMXC__Product_Stock__c/fields/SVMXC__At_or_Below_Reorder__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__At_or_Below_Reorder__c</fullName>
    <description>Indicates whether the stockable item is at or below the defined reorder point and should now be ordered.</description>
    <formula>IF(AND(SVMXC__Reorder_Level2__c &gt; 0, SVMXC__Reorder_Level2__c &gt;=  SVMXC__Quantity2__c), &quot;Yes&quot;, &quot;No&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>At or Below Reorder</label>
    <type>Text</type>
</CustomField>