force-app/main/default/objects/SVMXC__Product_Stock__c/fields/SVMXC__IsPartnerRecord__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__IsPartnerRecord__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag indicates if transaction is for/ by a Partner or not.</description>
    <inlineHelpText>Flag indicates if transaction is for/ by a Partner or not.</inlineHelpText>
    <label>IsPartnerRecord</label>
    <type>Checkbox</type>
</CustomField>