force-app/main/default/objects/SVMXC__Product_Stock__c/fields/SVMXC__Quantity2__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Quantity2__c</fullName>
    <description>Quantity of product in the provided location.</description>
    <inlineHelpText>Quantity of product in the provided location.</inlineHelpText>
    <label>Qty</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>