force-app/main/default/objects/SVMXC__Product_Stock__c/fields/SVMXC__Status__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Status__c</fullName>
    <description>Current Status of Product-Stock.</description>
    <inlineHelpText>Current Status of Product-Stock.</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Available</fullName>
            </value>
            <value>
                <fullName>In Transit</fullName>
            </value>
            <value>
                <fullName>Consumed</fullName>
            </value>
            <value>
                <fullName>Returned</fullName>
            </value>
            <value>
                <fullName>Scrap</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>